--- a/app/client/web/static/css/style.css
+++ b/app/client/web/static/css/style.css
@@ -66,7 +66,6 @@
     opacity:0.8;
 }
 
-/* If have captions */
 .rig-text {
     display:block;
     padding:0px 0px;
@@ -83,7 +82,6 @@
     font-weight:bold;
     font-family: 'Oswald', sans-serif;
     font-weight:normal!important;
-
     bottom:25%;
     color:white;
     opacity:0;
@@ -156,9 +154,7 @@
 
 .bottomSlide{
   border: 1px solid #202020;
-  /*margin-top: 25px;*/
   height: 15vh;
-  /*padding-top: 25px;*/
   -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
   -moz-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
   box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
@@ -167,23 +163,17 @@
   width: 100%;
   position: fixed;
   bottom: 0;
-  /*background-color: #FFFFFF;*/
   z-index: 2;
-  background: #ddd;
-  /*margin: calc(50vh - 30px) auto;*/
+  background: #dddddd;
   text-align: center;
   padding-bottom: 10px;
+  color: black;
 }
-
-
 
 #infoPane{
   position: absolute;
   left: 100%;
   color: white;
-  /*background-color: #d8e2e9;*/
-/*  background-image: url("../img/plexBackground.png");
-  background-size: cover;*/
   height: 90vh;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -253,16 +243,6 @@
 
 .navigationButton:hover{
   transform: scale(1.05);
-}
-
-.gradientInfo{
-/*  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 90%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(95%,rgba(255,255,255,1)));
-  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%);
-  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%);
-  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%);*/
-  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 90%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 
 html{
@@ -337,7 +317,7 @@ html{
 .progress {
   width: 1px;
   height: 5px;
-  background: #006B5A;
+  background: #FAA947;
   transition: width .1s linear;
   top: 0;
   position: relative;
@@ -352,27 +332,8 @@ html{
   z-index: 4;
 }
 
-#progressSlider {
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  background: #006B5A;
-  transition: width .1s linear;
-  top: -6px;
-  left: 0px;
-  position: relative;
-  border-radius: 50%;
-  z-index: 5;
-  transform: scale(1);
-
-}
-
-#progressSlider:hover{
-  transform: scale(1.05);
-}
-
 #togglePlay{  
-  background: #006B5A;
+  background: #FAA947;
   color: white;
   display: flex;
   justify-content: center;
@@ -392,7 +353,7 @@ html{
 }
 
 #prevChapterSelect{  
-  background: #006B5A;
+  background: #FAA947;
   color: white;
   display: flex;
   justify-content: center;
@@ -408,7 +369,7 @@ html{
 }
 
 #nextChapterSelect{  
-  background: #006B5A;
+  background: #FAA947;
   color: white;
   display: flex;
   justify-content: center;
@@ -423,7 +384,11 @@ html{
   transform: scale(1);
 }
 
-.playControls:hover{
+#nextChapterSelect:hover{
+  transform: scale(1.05);
+}
+
+#prevChapterSelect:hover{
   transform: scale(1.05);
 }
 
@@ -455,16 +420,22 @@ html{
   display: flex;
 }
 
-.auto-resize-portrait {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
-.auto-resize-portrait img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%
-    height: 50px;
-    width: 50px;
+
+#percentCompeted{
+  text-align: right;
+  margin-right: 5px;
+}
+
+#playingImage{
+  height: calc(15vh - 5px);
+  max-width: 100%;
+  text-align: left;
 }
