--- a/app/client/web/templates/index.html
+++ b/app/client/web/templates/index.html
@@ -6,12 +6,14 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css">
 
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
 
 <!-- External Javascript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 
 <script type="text/javascript" src="{{ url_for('static',filename='js/jqready.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static',filename='js/books.js') }}"></script>
@@ -51,13 +53,26 @@
           <button class="navigationButton"><i class="fa fa-bookmark" aria-hidden="true"></i>  Bookmarks</button><br>
           <button class="navigationButton"><i class="fa fa-tags" aria-hidden="true"></i>  Tags</button><br>
           <hr>
-          <button class="navigationButton"><i class="fa fa-user" aria-hidden="true"></i>  Account</button><br>
+          <a class="button navigationButton" href="#ex1" rel="modal:open"><i class="fa fa-user" aria-hidden="true"></i>  Account</a><br>
           <button class="navigationButton"><i class="fa fa-cogs" aria-hidden="true"></i>  Setting</button><br>
       </div>
       <div id="sideBarToggle">
         <div id="sideBarToggleShow">
           <!-- Side bar toggle line drawn here -->
         </div>
+      </div>
+
+      <!-- Modal Dialouge -->
+      <div id="ex1" class="modal">
+        <form action="/User/login" method="post">
+          <label for="uname"><b>Username</b></label>
+          <input type="text" placeholder="Enter Username" name="uname" required>
+
+          <label for="psw"><b>Password</b></label>
+          <input type="password" placeholder="Enter Password" name="psw" required>
+
+          <button type="submit">Login</button>
+        </form>
       </div>
 
       <div class="gallery">
@@ -108,14 +123,14 @@
       <div id="playPanel" class="bottomSlide">
         <div class="progress" id="progress"></div>
         <div id="shadowProgress"></div>
-        <div id="progressSlider"></div>
+        <!-- <div id="progressSlider"></div> -->
         <audio id="Player" ontimeupdate="advance()">
           <source src="" id="audioSource">
         </audio>
         <div id="playControlsContainer" class="row">
           <div class="quint-column">
             <div class="auto-resize-portrait">
-              <img src="http://localhost:5002/Book/2/cover/thumbnail:200:200" id="playingImage">
+              <img src="{{ url_for('static',filename='img/bookPlaceHolder.png') }}" id="playingImage" align="left">
             </div>
           </div>
           <div id="leftPlayPanel" class="quint-column">
