--- a/app/client/web/static/css/style.css
+++ b/app/client/web/static/css/style.css
@@ -19,7 +19,7 @@
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
-        
+
 /* The wrapper for each item */
 .rig-cell {
     /*margin:12px;
@@ -32,7 +32,7 @@
     border-radius: 20px;
 
 }
-        
+
 /* If have the image layer */
 .rig-img {
     display:block;
@@ -46,7 +46,7 @@
 #rig li:hover .rig-img {
     transform:scale(1.05);
 }
-        
+
 /* If have the overlay layer */
 .rig-overlay {
     position: absolute;
@@ -127,7 +127,7 @@
 @media screen and (max-width: 800px) {
   .gallery {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
   }
 }
 
@@ -190,10 +190,10 @@
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;  
+  z-index: -1;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  border-radius: 10px; 
+  border-radius: 10px;
 }
 
 #infoText{
@@ -257,6 +257,7 @@ html{
   background-color: black;
   width: 100%;
   height: 5vh;
+  top: 0;
   background-image: url("../img/plexBackground.png");
   overflow: hidden;
   vertical-align: middle;
@@ -265,6 +266,7 @@ html{
 #leftControls{
   position: absolute;
   left:0%;
+  width: 10%;
 }
 #rightControls{
   position: absolute;
@@ -291,7 +293,7 @@ html{
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;  
+  z-index: -1;
 }
 
 #sideBarToggle{
@@ -332,7 +334,7 @@ html{
   z-index: 4;
 }
 
-#togglePlay{  
+#togglePlay{
   background: #FAA947;
   color: white;
   display: flex;
@@ -352,7 +354,7 @@ html{
   transform: scale(1.05);
 }
 
-#prevChapterSelect{  
+#prevChapterSelect{
   background: #FAA947;
   color: white;
   display: flex;
@@ -368,7 +370,7 @@ html{
   transform: scale(1);
 }
 
-#nextChapterSelect{  
+#nextChapterSelect{
   background: #FAA947;
   color: white;
   display: flex;
