--- a/app/client/web/templates/index.html
+++ b/app/client/web/templates/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Style Sheets -->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css">
-
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
-
-<!-- External Javascript -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-
-<script type="text/javascript" src="{{ url_for('static',filename='js/jqready.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/books.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/utils.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/modal.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/GET_api_calls.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/POST_api_calls.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='js/audio.js') }}"></script>
-
-{% if current_user.is_authenticated %}
-  <script type="text/javascript">
-    var info = {{ info | tojson }};
-    var numBooks = {{ numBooks }};
-  </script>
-{% endif %}
-<script type="text/javascript">
-  var prevPanel = -1;
-  var Hide = true;
-</script>
-
 <html>
+  <head>
+    <title>Albrook</title>
+
+    <!-- Style Sheets -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css">
+
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
+
+    <!-- External Javascript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+
+    <script type="text/javascript" src="{{ url_for('static',filename='js/jqready.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/books.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/utils.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/modal.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/GET_api_calls.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/POST_api_calls.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/audio.js') }}"></script>
+
+    {% if current_user.is_authenticated %}
+      <script type="text/javascript">
+        var info = {{ info | tojson }};
+        var numBooks = {{ numBooks }};
+      </script>
+    {% endif %}
+    <script type="text/javascript">
+      var prevPanel = -1;
+      var Hide = true;
+    </script>
+
+  </head>
+
+  <body>
     <div id="infoBar">
       <div id="leftControls">
         <div class="row">
@@ -173,5 +178,5 @@
         </div>
       </div>
     </div>
-
+  </body>
 </html>
