--- a/app/client/web/static/css/style.css
+++ b/app/client/web/static/css/style.css
@@ -1,4 +1,4 @@
-#rig {
+.rig {
     max-width:80vw;
     margin-left:10vw;
     margin-right:10vw;
@@ -7,7 +7,7 @@
     list-style:none;
 
 }
-#rig li {
+.rig li {
     display: inline-block;
     *display:inline;/*for IE6 - IE7*/
     width:25%;
@@ -24,7 +24,7 @@
 .rig-cell {
     /*margin:12px;
     box-shadow:0 0 6px rgba(0,0,0,0.3);*/
-    display:block;
+    display: block;
     position: relative;
     overflow:hidden;
     -moz-border-radius: 20px;
@@ -43,7 +43,7 @@
     transition:all 1s;
 }
 
-#rig li:hover .rig-img {
+.rig li:hover .rig-img {
     transform:scale(1.05);
 }
 
@@ -62,7 +62,7 @@
     filter:alpha(opacity=0);/*For IE6 - IE8*/
     transition:all 0.6s;
 }
-#rig li:hover .rig-overlay {
+.rig li:hover .rig-overlay {
     opacity:0.8;
 }
 
@@ -92,25 +92,25 @@
 
 
 
-#rig li:hover .rig-text {
+.rig li:hover .rig-text {
     transform:translateY(0px);
     opacity:0.9;
 }
 
 @media (max-width: 9000px) {
-    #rig li {
+    .rig li {
         width:25%;
     }
 }
 
 @media (max-width: 700px) {
-    #rig li {
+    .rig li {
         width:33.33%;
     }
 }
 
 @media (max-width: 550px) {
-    #rig li {
+    .rig li {
         width:50%;
     }
 }
