Added Working Chapter Selector

--- a/app/client/web/templates/index.html
+++ b/app/client/web/templates/index.html
@@ -169,12 +169,12 @@
               </div>
               <div class="gelement" id="CurrentDynamicInfo">
                 <!-- <p id="currentChapter">Chapter</p> -->
-                <div class="dropdown">
+                <div id="chapterContainer" class="dropdown">
                   <button onclick="toggleChapterPane()" class="dropbtn">Chapter</button>
                   <div id="chapterPane" class="dropdown-content">
-                    <a href="#home">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
+
+                    <!-- Java Script Fills in the chapers-->
+
                   </div>
                 </div>
               </div>
