--- a/app/client/web/static/css/style.css
+++ b/app/client/web/static/css/style.css
@@ -443,7 +443,7 @@ input[type=text], input[type=password] {
 }
 
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #FAA947;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -452,7 +452,7 @@ input[type=text], input[type=password] {
 }
 
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #d38f3b;
 }
 
 .dropdown {
@@ -468,15 +468,18 @@ input[type=text], input[type=password] {
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  bottom: 100%;
+  overflow-y:auto;
+  height: 25vh;
 }
 
-.dropdown-content a {
+.dropdown-content p {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown p:hover {background-color: #ddd;}
 
 .show {display: block;}
