Chapter navigation buttons now time skip buttons

--- a/app/client/web/templates/index.html
+++ b/app/client/web/templates/index.html
@@ -182,9 +182,9 @@
           </div>
           <div class="quint-column" id="buttonContainer">
             <div class="intra_row">
-              <div class="tri-column" onClick="playPrevChapter()" id="prevChapterSelect"><i class="fa fa-backward" aria-hidden="true"></i></div>
+              <div class="tri-column" onClick="deltaTime(-30)" id="prevChapterSelect"><i class="fa fa-backward" aria-hidden="true"></i></div>
               <div id="togglePlay" onClick="togglePlay()" class="tri-column playControls"><i class="fa fa-play" aria-hidden="true"></i></div>
-              <div class="tri-column" onClick="playNextChapter()" id="nextChapterSelect"><i class="fa fa-forward" aria-hidden="true"></i></div>
+              <div class="tri-column" onClick="deltaTime(30)" id="nextChapterSelect"><i class="fa fa-forward" aria-hidden="true"></i></div>
             </div>
           </div>
 
